<resources>
    <string name="app_name">Companion for Resistance: Avalon</string>

    <string name="unexpected_error">Unexpected error</string>

    <string name="welcome_title">Welcome</string>
    <string name="welcome_resume">Join</string>
    <string name="welcome_name">Name</string>
    <string name="welcome_name_error">Required field</string>
    <string name="welcome_new_game">New Game</string>
    <string name="welcome_join_game">Join Game</string>
    <string name="welcome_game_id">Game ID</string>
    <string name="welcome_game_id_error">Required field</string>
    <string name="welcome_game_exist_error">Cannot find game</string>
    <string name="welcome_not_your_game_error">You are not in this game</string>
    <string name="welcome_invalid_version_error">Incorrect game version. Required: %1$s (this: %2$s)</string>
    <string name="welcome_name_exists_error">Someone else has your name</string>

    <string name="lobby_title">Lobby (Game # %s)</string>
    <string name="lobby_number_players_error">Must be between %1$s and %2$s players (is %3$s)</string>
    <string name="lobby_number_characters_error">Must have max %1$s good (is %2$s) and max %3$s bad (is %4$s)</string>
    <string name="lobby_invalid_status_error">Something went wrong</string>
    <string name="lobby_no_suicide_error">That would be committing game suicide</string>

    <string name="game_title">Game</string>
    <string name="game_character_info">%1$s\n\nYou are %2$s (%3$s)\n\n%4$s\n%5$s\nCharacters are\n%6$s\nPlayers are\n%7$s</string>
    <string name="game_character_team_arthur">Team Arthur (good: %s players)</string>
    <string name="game_character_team_mordred">Team Mordred (bad: %s players)</string>
    <string name="game_info_title">Info</string>
    <string name="game_id">Game # %s</string>
    <string name="game_round">Round: %s</string>
    <string name="game_captain">Captain: %s</string>
    <string name="game_round_info">%1$s (%2$s)</string>

    <string name="good">Good</string>
    <string name="bad">Bad</string>
</resources>
