<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                card_view:cardCornerRadius="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Headline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/padding_medium"
                        android:layout_marginTop="@dimen/padding_large"
                        android:paddingEnd="@dimen/padding_medium"
                        android:paddingStart="@dimen/padding_medium"
                        android:text="@string/welcome_title"/>

                    <EditText
                        android:id="@+id/name_edit_text"
                        style="@style/Base.TextAppearance.AppCompat.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/padding_medium"
                        android:hint="@string/welcome_name"
                        android:inputType="textCapWords"
                        android:paddingEnd="@dimen/padding_medium"
                        android:paddingStart="@dimen/padding_medium"/>

                    <Button
                        android:id="@+id/new_game_button"
                        style="@style/Base.TextAppearance.AppCompat.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="@dimen/padding_small"
                        android:layout_marginStart="@dimen/padding_small"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:text="@string/welcome_new_game"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                card_view:cardCornerRadius="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Headline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/padding_medium"
                        android:layout_marginTop="@dimen/padding_large"
                        android:paddingEnd="@dimen/padding_medium"
                        android:paddingStart="@dimen/padding_medium"
                        android:text="Resume"/>

                    <EditText
                        android:id="@+id/game_id_edit_text"
                        style="@style/Base.TextAppearance.AppCompat.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/padding_medium"
                        android:hint="@string/welcome_game_id"
                        android:inputType="number"
                        android:paddingEnd="@dimen/padding_medium"
                        android:paddingStart="@dimen/padding_medium"/>

                    <Button
                        android:id="@+id/join_game_button"
                        style="@style/Base.TextAppearance.AppCompat.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="@dimen/padding_small"
                        android:layout_marginStart="@dimen/padding_small"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:text="@string/welcome_join_game"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"/>
</FrameLayout>
